# tika-magic

./: .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
definitions/: mimetypes.xml  tika-changes.txt  tika-mimetypes.xml
file/: Cargo.toml
file/src/: main.rs
lib/: Cargo.toml
lib/benches/: from_u8.rs  match_u8.rs
lib/src/: lib.rs
lib/src/magic/: generated.rs  mod.rs  ole.rs  zip.rs
lib/tests/: content_type_tests.rs  inline_tests.rs
lib/tests/inputs/text/x-matlab/: matlab.matlab
lib/tests/inputs/text/x-uuencode/: sample-data-csv.uue
src/magic/: generated.rs  mod.rs
tests/: content_type_tests.rs  inline_tests.rs
tests/inputs/application/x-sh/: organize.sh
tools/file/: Cargo.toml  clippy.toml
tools/file/src/: main.rs
tools/parse_definitions/: Cargo.toml
tools/parse_definitions/src/: main.rs  parse_xml.rs  rule_regexes.rs
tools/parse_definitions/templates/: generated.rs.stpl
