[package]
name = "tika-magic"
version = "0.2.7"
edition = "2021"
authors = [
    "Ryan Stortz <ryan@withzombies.com>",
]
description = "Determines the MIME type of a file using the Apache Tika mime database."
repository = "https://github.com/withzombies/tika-magic/"
documentation = "https://docs.rs/tika-magic/"
license = "Apache-2.0"
readme = "README.md"
categories = ["parser-implementations", "filesystem"]
keywords = ["mime", "filesystem", "media-types"]
exclude = ["tests/*", "benches/*", "tools/*"]
rust-version = "1.73.0"

[dependencies]
phf = { version = "^0.10.0", features = ["macros"] }
regex = "^1.7.0"
zip = { version = ">=2.4.2,<5.0.0", optional = true, default-features = false, features = ["deflate", "time"] }
ole = { version = "^0.1.0", optional = true }
once_cell = "^1.5.0"

[dev-dependencies]
bencher = "^0.1.5"
rstest = "^0.26"

[features]
open_zips = ["dep:zip"]
open_ole = ["dep:ole"]

[package.metadata]
exclude = ["tools/*", "benches/*"]

[[bench]]
name = "from_u8"
harness = false
path = "benches/from_u8.rs"

[[bench]]
name = "match_u8"
harness = false
path = "benches/match_u8.rs"
