[package]
name = "tika-magic"
version = "0.2.4"
edition = "2021"
authors = [
    "Ryan Stortz <ryan@withzombies.com>",
]
description = "Determines the MIME type of a file using the Apache Tika mime database."
repository = "https://github.com/withzombies/tika-magic/"
documentation = "https://docs.rs/tika-magic/"
license = "Apache-2.0"
readme = "../README.md"
categories = ["parser-implementations", "filesystem"]
keywords = ["mime", "filesystem", "media-types"]
exclude = ["tests/*", "benches/*"]

[dependencies]
phf = { version = "^0.11.3", features = ["macros", "phf_macros"] }
regex = "^1.11.1"
zip = { version = ">=2.4.2,^3.0.0", optional = true }
ole = { version = "^0.1.0", optional = true }

[dev-dependencies]
bencher = "0.1.5"
rstest = "0.25.0"

[features]
open_zips = ["dep:zip"]
open_ole = ["dep:ole"]

[package.metadata]
exclude = ["tools/*", "file/*", "benches/*"]

[[bench]]
name = "from_u8"
harness = false

[[bench]]
name = "match_u8"
harness = false
